# FIFAFlow-AI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  vercel.json
backend/: main.py  requirements.txt
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  event_engine.py  observability.py  security.py  seeder.py
backend/app/models/: __init__.py  models.py
backend/app/routes/: __init__.py  auth.py  copilot.py  incidents.py  navigation.py  sustainability.py  translate.py  transport.py  twin.py  volunteers.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  gemini.py  route_optimizer.py  simulator.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccessAssistant.tsx  CommandCenter.tsx  CopilotDrawer.tsx  DigitalTwinMap.tsx  EmergencyTriagePanel.tsx  LandingPage.tsx  VoiceTranslator.tsx
frontend/src/contexts/: ThemeContext.tsx
tests/: conftest.py  test_api.py  test_auth.py  test_engine.py  test_routes_coverage.py  test_security.py  test_websocket.py
