[project]
name = "fifaflow-ai"
version = "1.0.0"
description = "GenAI-enabled FIFA World Cup 2026 Stadium Operations & Digital Twin Platform"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FIFAFlow AI Team"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.pyright]
include = ["backend", "tests"]
extraPaths = ["backend"]
pythonVersion = "3.10"

